WIP Rotation while building
Added Gravity Direction Chars
Added Ship Rotation and Changes in Attachments and calculations for movement and Building

--- a/GravityDrive.uproject
+++ b/GravityDrive.uproject
@@ -11,7 +11,8 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"Voxel",
-				"UMG"
+				"UMG",
+				"NavigationSystem"
 			]
 		}
 	],
@@ -20,6 +21,11 @@
 			"Name": "VoxelPro",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/b08e5581837e4bbca486b61cdf2751bb"
+		},
+		{
+			"Name": "DirGravity",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/1e8883ab1e2f44f0984006d4ab67acd4"
 		}
 	]
 }
