--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,7 +79,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="MiddleMouse",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
-+ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="ZoomIn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="UpZ",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
@@ -96,6 +96,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=LeftControl)
 +AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=SpaceBar)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="RollClockwise",Scale=-1.000000,Key=E)
++AxisMappings=(AxisName="RollClockwise",Scale=1.000000,Key=Q)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
