--- a/GravityDrive.uproject
+++ b/GravityDrive.uproject
@@ -26,6 +26,11 @@
 			"Name": "DirGravity",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/1e8883ab1e2f44f0984006d4ab67acd4"
+		},
+		{
+			"Name": "SpaceNebulaStarfield",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/8af0da00ef64438484d9dc6e7e3b860c"
 		}
 	]
 }
